[tool.poetry]
name = "msprobe"
version = "0.1.0"
description = "All things recon for self-hosted Microsoft applications."
authors = ["ed <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^11.1.0"
logger = "^1.4"
requests = "^2.27.1"
bs4 = "^0.0.1"
setuptools = "^60.9.1"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
