[tool.poetry]
name = "msprobe"
version = "0.1.2"
description = "Finding all things on-prem MS!"
authors = ["Nicholas A <nicholasanastasirepair@gmail.com>"]
readme = "README.md"
license = "BSD 3-Clause"
homepage = "https://github.com/puzzlpeaches/msprobe"
repository = "https://github.com/puzzlepeaches/msprobe"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
requests = "^2.27.1"
bs4 = "^0.0.1"
rich = "^12.2.0"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
msprobe = "msprobe.msprobe:cli"
